# vision_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
src/vision_bot/: CMakeLists.txt  Dockerfile  package.xml  setup.py
src/vision_bot/config/: controllers.yaml  gz_bridge.yaml
src/vision_bot/description/: robot.urdf.xacro  robot_control.xacro  robot_core.xacro  robot_gazebo.xacro  ros2_control.xacro
src/vision_bot/description/components/: camera.xacro  chassis.xacro  inertia_macros.xacro  uss.xacro  wheels.xacro
src/vision_bot/description/glb/: robot.urdf
src/vision_bot/launch/: model.launch.py  nodes.launch.py  sim.launch.py  urdf.launch.py
src/vision_bot/src/heartbeat/: heartbeat.cpp  heartbeat.hpp
src/vision_bot/src/navigation/: navigation_node.cpp  navigation_node.hpp
src/vision_bot/src/perception/: yolo_detector_node.py
src/vision_bot/worlds/: apartment.sdf
src/visionbot/: CMakeLists.txt  package.xml
src/visionbot_description/: CMakeLists.txt  package.xml
src/visionbot_description/description/: robot.urdf.xacro  robot_control.xacro  robot_core.xacro  robot_gazebo.xacro
src/visionbot_description/description/components/: camera.xacro  chassis.xacro  inertia_macros.xacro  lidar.xacro  wheels.xacro
src/visionbot_description/description/glb/: robot.urdf
src/visionbot_description/description/meshes/: rpi_camera_link.stl
src/visionbot_launch/: CMakeLists.txt  package.xml
src/visionbot_launch/config/: controllers.yaml  gz_bridge.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/visionbot_launch/launch/: gazebo.launch.py  model.launch.py  nodes.launch.py
src/visionbot_navigation/: CMakeLists.txt  package.xml
src/visionbot_navigation/include/visionbot_navigation/: heartbeat.hpp  navigation_node.hpp  safety_stop.hpp
src/visionbot_navigation/src/: heartbeat.cpp  navigation_node.cpp  safety_stop.cpp
src/visionbot_perception/: package.xml  setup.cfg  setup.py
