<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visionbot</name>
  <version>0.0.0</version>
  <description>Main ROS2 package for VisionBot</description>
  <maintainer email="pavle.gasic7@gmail.com">gasa14</maintainer>
  <license>GPL-2.0 licence</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>visionbot_description</exec_depend>
  <exec_depend>visionbot_launch</exec_depend>
  <exec_depend>visionbot_navigation</exec_depend>
  <exec_depend>visionbot_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>